attached pooled results to results csvs

--- a/notebooks/result_notebooks/prop_matching_race.ipynb
+++ b/notebooks/result_notebooks/prop_matching_race.ipynb
@@ -568,8 +568,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -2420.9\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       175.74\n",
-      "Time:                        13:36:25   Pearson chi2:                     244.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       175.74\n",
+      "Time:                        18:30:31   Pearson chi2:                     244.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):            0.04551\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -585,8 +585,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -2505.7\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       258.03\n",
-      "Time:                        13:36:25   Pearson chi2:                     282.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       258.03\n",
+      "Time:                        18:30:31   Pearson chi2:                     282.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):            0.04798\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -747,8 +747,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1943.7\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       196.70\n",
-      "Time:                        13:36:26   Pearson chi2:                     226.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       196.70\n",
+      "Time:                        18:30:34   Pearson chi2:                     226.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):           0.006289\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -764,8 +764,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1789.7\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       191.65\n",
-      "Time:                        13:36:26   Pearson chi2:                     230.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       191.65\n",
+      "Time:                        18:30:34   Pearson chi2:                     230.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):           0.004227\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -921,8 +921,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1302.2\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       151.72\n",
-      "Time:                        13:36:28   Pearson chi2:                     175.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       151.72\n",
+      "Time:                        18:30:37   Pearson chi2:                     175.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):            0.01804\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -938,8 +938,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -607.46\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       127.08\n",
-      "Time:                        13:36:28   Pearson chi2:                     162.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       127.08\n",
+      "Time:                        18:30:37   Pearson chi2:                     162.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):            0.02683\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -1096,8 +1096,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -976.26\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       184.78\n",
-      "Time:                        13:36:29   Pearson chi2:                     145.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       184.78\n",
+      "Time:                        18:30:40   Pearson chi2:                     145.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):            0.03538\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -1113,8 +1113,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1357.5\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       252.06\n",
-      "Time:                        13:36:29   Pearson chi2:                     136.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       252.06\n",
+      "Time:                        18:30:40   Pearson chi2:                     136.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):            0.08055\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -1289,8 +1289,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1040.3\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       234.83\n",
-      "Time:                        13:36:30   Pearson chi2:                     190.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       234.83\n",
+      "Time:                        18:30:44   Pearson chi2:                     190.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):          9.324e-07\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -1306,8 +1306,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -1390.8\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       162.07\n",
-      "Time:                        13:36:30   Pearson chi2:                     188.\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       162.07\n",
+      "Time:                        18:30:44   Pearson chi2:                     188.\n",
       "No. Iterations:                     5   Pseudo R-squ. (CS):           0.001639\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
        "random effect wls -0.079821  0.150136 -0.374082  0.214441       NaN  1.000000"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
        "(0.8766347016955002, 0.14247932105970632)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1949,7 @@
        "random effect wls -0.089199  0.174807 -0.431815  0.253417       NaN  1.000000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,11 +1982,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame(all_results)"
+    "results = pd.DataFrame(all_results)\n",
+    "\n",
+    "# Save again\n",
+    "results.to_csv('../../data/outcomes/results_race.csv')"
    ]
   },
   {
@@ -1998,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2107,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2258,8 +2261,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -9916.8\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       872.04\n",
-      "Time:                        13:36:34   Pearson chi2:                 1.34e+03\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       872.04\n",
+      "Time:                        18:28:29   Pearson chi2:                 1.34e+03\n",
       "No. Iterations:                     6   Pseudo R-squ. (CS):           0.001523\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -2275,8 +2278,8 @@
       "Model Family:        NegativeBinomial   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -10570.\n",
-      "Date:                Wed, 26 Mar 2025   Deviance:                       684.75\n",
-      "Time:                        13:36:34   Pearson chi2:                 1.31e+03\n",
+      "Date:                Sat, 05 Apr 2025   Deviance:                       684.75\n",
+      "Time:                        18:28:29   Pearson chi2:                 1.31e+03\n",
       "No. Iterations:                     6   Pseudo R-squ. (CS):          1.875e-05\n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
@@ -2341,7 +2344,7 @@
        "  0.15820592491747698]}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
